library/src/libqdatetime.h

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QTime QTime;
typedef struct QTimeZone QTimeZone;
QDate* QDate_new(QDate* other);
QDate* QDate_new2(QDate* other);
QDate* QDate_new3();
QDate* QDate_new4(int y, int m, int d);
QDate* QDate_new5(int y, int m, int d, QCalendar* cal);
QDate* QDate_new6(QDate* param1);
bool QDate_IsNull(const QDate* self);
bool QDate_IsValid(const QDate* self);
int QDate_Year(const QDate* self);
int QDate_Month(const QDate* self);
int QDate_Day(const QDate* self);
int QDate_DayOfWeek(const QDate* self);
int QDate_DayOfYear(const QDate* self);
int QDate_DaysInMonth(const QDate* self);
int QDate_DaysInYear(const QDate* self);
int QDate_WeekNumber(const QDate* self);
int QDate_YearWithCal(const QDate* self, QCalendar* cal);
int QDate_MonthWithCal(const QDate* self, QCalendar* cal);
int QDate_DayWithCal(const QDate* self, QCalendar* cal);
int QDate_DayOfWeekWithCal(const QDate* self, QCalendar* cal);
int QDate_DayOfYearWithCal(const QDate* self, QCalendar* cal);
int QDate_DaysInMonthWithCal(const QDate* self, QCalendar* cal);
int QDate_DaysInYearWithCal(const QDate* self, QCalendar* cal);
QDateTime* QDate_StartOfDay(const QDate* self);
QDateTime* QDate_EndOfDay(const QDate* self);
QDateTime* QDate_StartOfDayWithZone(const QDate* self, QTimeZone* zone);
QDateTime* QDate_EndOfDayWithZone(const QDate* self, QTimeZone* zone);
libqt_string QDate_ToString(const QDate* self);
libqt_string QDate_ToStringWithFormat(const QDate* self, libqt_string format);
bool QDate_SetDate(QDate* self, int year, int month, int day);
bool QDate_SetDate2(QDate* self, int year, int month, int day, QCalendar* cal);
void QDate_GetDate(const QDate* self, int* year, int* month, int* day);
QDate* QDate_AddDays(const QDate* self, long long days);
QDate* QDate_AddMonths(const QDate* self, int months);
QDate* QDate_AddYears(const QDate* self, int years);
QDate* QDate_AddMonths2(const QDate* self, int months, QCalendar* cal);
QDate* QDate_AddYears2(const QDate* self, int years, QCalendar* cal);
long long QDate_DaysTo(const QDate* self, QDate* d);
QDate* QDate_CurrentDate();
QDate* QDate_FromStringWithStringVal(libqt_string stringVal);
QDate* QDate_FromString4(libqt_string stringVal, libqt_string format);
bool QDate_IsValid2(int y, int m, int d);
bool QDate_IsLeapYear(int year);
QDate* QDate_FromJulianDay(long long jd_);
long long QDate_ToJulianDay(const QDate* self);
int QDate_WeekNumber1(const QDate* self, int* yearNum);
QDateTime* QDate_StartOfDay1(const QDate* self, int spec);
QDateTime* QDate_StartOfDay2(const QDate* self, int spec, int offsetSeconds);
QDateTime* QDate_EndOfDay1(const QDate* self, int spec);
QDateTime* QDate_EndOfDay2(const QDate* self, int spec, int offsetSeconds);
libqt_string QDate_ToString1(const QDate* self, int format);
libqt_string QDate_ToString22(const QDate* self, libqt_string format, QCalendar* cal);
QDate* QDate_FromString23(libqt_string stringVal, int format);
QDate* QDate_FromString34(libqt_string stringVal, libqt_string format, QCalendar* cal);
void QDate_Delete(QDate* self);
QTime* QTime_new(QTime* other);
bool QTime_IsNull(const QTime* self);
bool QTime_IsValid(const QTime* self);
int QTime_Hour(const QTime* self);
int QTime_Minute(const QTime* self);
int QTime_Second(const QTime* self);
int QTime_Msec(const QTime* self);
libqt_string QTime_ToString(const QTime* self);
libqt_string QTime_ToStringWithFormat(const QTime* self, libqt_string format);
bool QTime_SetHMS(QTime* self, int h, int m, int s);
QTime* QTime_AddSecs(const QTime* self, int secs);
int QTime_SecsTo(const QTime* self, QTime* t);
QTime* QTime_AddMSecs(const QTime* self, int ms);
int QTime_MsecsTo(const QTime* self, QTime* t);
QTime* QTime_FromMSecsSinceStartOfDay(int msecs);
int QTime_MsecsSinceStartOfDay(const QTime* self);
QTime* QTime_CurrentTime();
QTime* QTime_FromStringWithStringVal(libqt_string stringVal);
QTime* QTime_FromString4(libqt_string stringVal, libqt_string format);
bool QTime_IsValid2(int h, int m, int s);
libqt_string QTime_ToString1(const QTime* self, int f);
bool QTime_SetHMS4(QTime* self, int h, int m, int s, int ms);
QTime* QTime_FromString23(libqt_string stringVal, int format);
bool QTime_IsValid4(int h, int m, int s, int ms);
void QTime_Delete(QTime* self);