src/qt/libqdatetime.bf

extension CQt
{
	[LinkName("QDate_new")]
	public static extern void* QDate_new(void* other);
	[LinkName("QDate_new2")]
	public static extern void* QDate_new2(void* other);
	[LinkName("QDate_new3")]
	public static extern void* QDate_new3();
	[LinkName("QDate_new4")]
	public static extern void* QDate_new4(int32 y, int32 m, int32 d);
	[LinkName("QDate_new5")]
	public static extern void* QDate_new5(int32 y, int32 m, int32 d, void cal);
	[LinkName("QDate_new6")]
	public static extern void* QDate_new6(void* param1);
	[LinkName("QDate_IsNull")]
	public static extern bool QDate_IsNull(void* c_this);
	[LinkName("QDate_IsValid")]
	public static extern bool QDate_IsValid(void* c_this);
	[LinkName("QDate_Year")]
	public static extern int32 QDate_Year(void* c_this);
	[LinkName("QDate_Month")]
	public static extern int32 QDate_Month(void* c_this);
	[LinkName("QDate_Day")]
	public static extern int32 QDate_Day(void* c_this);
	[LinkName("QDate_DayOfWeek")]
	public static extern int32 QDate_DayOfWeek(void* c_this);
	[LinkName("QDate_DayOfYear")]
	public static extern int32 QDate_DayOfYear(void* c_this);
	[LinkName("QDate_DaysInMonth")]
	public static extern int32 QDate_DaysInMonth(void* c_this);
	[LinkName("QDate_DaysInYear")]
	public static extern int32 QDate_DaysInYear(void* c_this);
	[LinkName("QDate_WeekNumber")]
	public static extern int32 QDate_WeekNumber(void* c_this);
	[LinkName("QDate_YearWithCal")]
	public static extern int32 QDate_YearWithCal(void* c_this, void cal);
	[LinkName("QDate_MonthWithCal")]
	public static extern int32 QDate_MonthWithCal(void* c_this, void cal);
	[LinkName("QDate_DayWithCal")]
	public static extern int32 QDate_DayWithCal(void* c_this, void cal);
	[LinkName("QDate_DayOfWeekWithCal")]
	public static extern int32 QDate_DayOfWeekWithCal(void* c_this, void cal);
	[LinkName("QDate_DayOfYearWithCal")]
	public static extern int32 QDate_DayOfYearWithCal(void* c_this, void cal);
	[LinkName("QDate_DaysInMonthWithCal")]
	public static extern int32 QDate_DaysInMonthWithCal(void* c_this, void cal);
	[LinkName("QDate_DaysInYearWithCal")]
	public static extern int32 QDate_DaysInYearWithCal(void* c_this, void cal);
	[LinkName("QDate_StartOfDay")]
	public static extern void QDate_StartOfDay(void* c_this);
	[LinkName("QDate_EndOfDay")]
	public static extern void QDate_EndOfDay(void* c_this);
	[LinkName("QDate_StartOfDayWithZone")]
	public static extern void QDate_StartOfDayWithZone(void* c_this, void* zone);
	[LinkName("QDate_EndOfDayWithZone")]
	public static extern void QDate_EndOfDayWithZone(void* c_this, void* zone);
	[LinkName("QDate_ToString")]
	public static extern libqt_string QDate_ToString(void* c_this);
	[LinkName("QDate_ToStringWithFormat")]
	public static extern libqt_string QDate_ToStringWithFormat(void* c_this, libqt_string format);
	[LinkName("QDate_SetDate")]
	public static extern bool QDate_SetDate(void* c_this, int32 year, int32 month, int32 day);
	[LinkName("QDate_SetDate2")]
	public static extern bool QDate_SetDate2(void* c_this, int32 year, int32 month, int32 day, void cal);
	[LinkName("QDate_GetDate")]
	public static extern void QDate_GetDate(void* c_this, int32* year, int32* month, int32* day);
	[LinkName("QDate_AddDays")]
	public static extern void QDate_AddDays(void* c_this, int64 days);
	[LinkName("QDate_AddMonths")]
	public static extern void QDate_AddMonths(void* c_this, int32 months);
	[LinkName("QDate_AddYears")]
	public static extern void QDate_AddYears(void* c_this, int32 years);
	[LinkName("QDate_AddMonths2")]
	public static extern void QDate_AddMonths2(void* c_this, int32 months, void cal);
	[LinkName("QDate_AddYears2")]
	public static extern void QDate_AddYears2(void* c_this, int32 years, void cal);
	[LinkName("QDate_DaysTo")]
	public static extern int64 QDate_DaysTo(void* c_this, void d);
	[LinkName("QDate_CurrentDate")]
	public static extern void QDate_CurrentDate();
	[LinkName("QDate_FromStringWithStringVal")]
	public static extern void QDate_FromStringWithStringVal(libqt_string stringVal);
	[LinkName("QDate_FromString4")]
	public static extern void QDate_FromString4(libqt_string stringVal, libqt_string format);
	[LinkName("QDate_IsValid2")]
	public static extern bool QDate_IsValid2(int32 y, int32 m, int32 d);
	[LinkName("QDate_IsLeapYear")]
	public static extern bool QDate_IsLeapYear(int32 year);
	[LinkName("QDate_FromJulianDay")]
	public static extern void QDate_FromJulianDay(int64 jd_);
	[LinkName("QDate_ToJulianDay")]
	public static extern int64 QDate_ToJulianDay(void* c_this);
	[LinkName("QDate_WeekNumber1")]
	public static extern int32 QDate_WeekNumber1(void* c_this, int32* yearNum);
	[LinkName("QDate_StartOfDay1")]
	public static extern void QDate_StartOfDay1(void* c_this, int64 spec);
	[LinkName("QDate_StartOfDay2")]
	public static extern void QDate_StartOfDay2(void* c_this, int64 spec, int32 offsetSeconds);
	[LinkName("QDate_EndOfDay1")]
	public static extern void QDate_EndOfDay1(void* c_this, int64 spec);
	[LinkName("QDate_EndOfDay2")]
	public static extern void QDate_EndOfDay2(void* c_this, int64 spec, int32 offsetSeconds);
	[LinkName("QDate_ToString1")]
	public static extern libqt_string QDate_ToString1(void* c_this, int64 format);
	[LinkName("QDate_ToString22")]
	public static extern libqt_string QDate_ToString22(void* c_this, libqt_string format, void cal);
	[LinkName("QDate_FromString23")]
	public static extern void QDate_FromString23(libqt_string stringVal, int64 format);
	[LinkName("QDate_FromString34")]
	public static extern void QDate_FromString34(libqt_string stringVal, libqt_string format, void cal);
	/// Delete this object from C++ memory
	[LinkName("QDate_Delete")]
	public static extern void QDate_Delete(void* self);
}
public interface IQTime
{
	void* NativePtr { get; }
}
public struct QTimePtr : IQTime, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(IQTime other)
	{
		return .(CQt.QTime_new((other == default || other.NativePtr == default) ? default : other.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QTime_Delete(this.nativePtr);
	}
	
	public bool IsNull()
	{
		return CQt.QTime_IsNull(this.nativePtr);
	}
	
	public bool IsValid()
	{
		return CQt.QTime_IsValid(this.nativePtr);
	}
	
	public int32 Hour()
	{
		return CQt.QTime_Hour(this.nativePtr);
	}
	
	public int32 Minute()
	{
		return CQt.QTime_Minute(this.nativePtr);
	}
	
	public int32 Second()
	{
		return CQt.QTime_Second(this.nativePtr);
	}
	
	public int32 Msec()
	{
		return CQt.QTime_Msec(this.nativePtr);
	}
	
	public libqt_string ToString()
	{
		return CQt.QTime_ToString(this.nativePtr);
	}
	
	public libqt_string ToStringWithFormat(String format)
	{
		return CQt.QTime_ToStringWithFormat(this.nativePtr, libqt_string(format));
	}
	
	public bool SetHMS(int32 h, int32 m, int32 s)
	{
		return CQt.QTime_SetHMS(this.nativePtr, h, m, s);
	}
	
	public void AddSecs(int32 secs)
	{
		CQt.QTime_AddSecs(this.nativePtr, secs);
	}
	
	public int32 SecsTo(IQTime t)
	{
		return CQt.QTime_SecsTo(this.nativePtr, default);
	}
	
	public void AddMSecs(int32 ms)
	{
		CQt.QTime_AddMSecs(this.nativePtr, ms);
	}
	
	public int32 MsecsTo(IQTime t)
	{
		return CQt.QTime_MsecsTo(this.nativePtr, default);
	}
	
	public static void FromMSecsSinceStartOfDay(int32 msecs)
	{
		CQt.QTime_FromMSecsSinceStartOfDay(msecs);
	}
	
	public int32 MsecsSinceStartOfDay()
	{
		return CQt.QTime_MsecsSinceStartOfDay(this.nativePtr);
	}
	
	public static void CurrentTime()
	{
		CQt.QTime_CurrentTime();
	}
	
	public static void FromStringWithStringVal(String stringVal)
	{
		CQt.QTime_FromStringWithStringVal(libqt_string(stringVal));
	}
	
	public static void FromString4(String stringVal, String format)
	{
		CQt.QTime_FromString4(libqt_string(stringVal), libqt_string(format));
	}
	
	public static bool IsValid2(int32 h, int32 m, int32 s)
	{
		return CQt.QTime_IsValid2(h, m, s);
	}
	
	public libqt_string ToString1(int64 f)
	{
		return CQt.QTime_ToString1(this.nativePtr, (int64)f);
	}
	
	public bool SetHMS4(int32 h, int32 m, int32 s, int32 ms)
	{
		return CQt.QTime_SetHMS4(this.nativePtr, h, m, s, ms);
	}
	
	public static void FromString23(String stringVal, int64 format)
	{
		CQt.QTime_FromString23(libqt_string(stringVal), (int64)format);
	}
	
	public static bool IsValid4(int32 h, int32 m, int32 s, int32 ms)
	{
		return CQt.QTime_IsValid4(h, m, s, ms);
	}
	
}
public class QTime
{
	public QTimePtr handle;
	
	public static implicit operator QTimePtr(Self self)
	{
		return self.handle;
	}
	
	public this(IQTime other)
	{
		this.handle = QTimePtr.New(other);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public bool IsNull()
	{
		return this.handle.IsNull();
	}
	
	public bool IsValid()
	{
		return this.handle.IsValid();
	}
	
	public int32 Hour()
	{
		return this.handle.Hour();
	}
	
	public int32 Minute()
	{
		return this.handle.Minute();
	}
	
	public int32 Second()
	{
		return this.handle.Second();
	}
	
	public int32 Msec()
	{
		return this.handle.Msec();
	}
	
	public libqt_string ToString()
	{
		return this.handle.ToString();
	}
	
	public libqt_string ToStringWithFormat(String format)
	{
		return this.handle.ToStringWithFormat(format);
	}
	
	public bool SetHMS(int32 h, int32 m, int32 s)
	{
		return this.handle.SetHMS(h, m, s);
	}
	
	public void AddSecs(int32 secs)
	{
		this.handle.AddSecs(secs);
	}
	
	public int32 SecsTo(IQTime t)
	{
		return this.handle.SecsTo(default);
	}
	
	public void AddMSecs(int32 ms)
	{
		this.handle.AddMSecs(ms);
	}
	
	public int32 MsecsTo(IQTime t)
	{
		return this.handle.MsecsTo(default);
	}
	
	public static void FromMSecsSinceStartOfDay(int32 msecs)
	{
		QTimePtr.FromMSecsSinceStartOfDay(msecs);
	}
	
	public int32 MsecsSinceStartOfDay()
	{
		return this.handle.MsecsSinceStartOfDay();
	}
	
	public static void CurrentTime()
	{
		QTimePtr.CurrentTime();
	}
	
	public static void FromStringWithStringVal(String stringVal)
	{
		QTimePtr.FromStringWithStringVal(stringVal);
	}
	
	public static void FromString4(String stringVal, String format)
	{
		QTimePtr.FromString4(stringVal, format);
	}
	
	public static bool IsValid2(int32 h, int32 m, int32 s)
	{
		return QTimePtr.IsValid2(h, m, s);
	}
	
	public libqt_string ToString1(int64 f)
	{
		return this.handle.ToString1(f);
	}
	
	public bool SetHMS4(int32 h, int32 m, int32 s, int32 ms)
	{
		return this.handle.SetHMS4(h, m, s, ms);
	}
	
	public static void FromString23(String stringVal, int64 format)
	{
		QTimePtr.FromString23(stringVal, format);
	}
	
	public static bool IsValid4(int32 h, int32 m, int32 s, int32 ms)
	{
		return QTimePtr.IsValid4(h, m, s, ms);
	}
	
}
